# model-display

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  manage.py  model_display.db  pyproject.toml  requirements.txt
model_display/: asgi.py  settings.py  urls.py  wsgi.py
model_showcase/: apps.py  serializers.py  urls.py  views.py
model_showcase.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
model_showcase/info_field/: __init__.py  additional_info.py  basefield_info.py  builder.py  propertyfield_info.py
model_showcase/info_model/: __init__.py  baseclasses_model_info.py  model_info.py  related_model_info.py  subclasses_model_info.py  url_model_info.py
model_showcase/static/css/: showcase_style.css
model_showcase/static/js/: clipboard-and-dropdown.js
model_showcase/templates/model_showcase/: base.html  index.html  navbar.html  search.html
model_showcase/templates/model_showcase/info_field/: base_field.html  list_fields_model.html  list_property_fields.html  property_field.html
model_showcase/templates/model_showcase/info_field/additional_fields/: link_field.html  remote_field.html
model_showcase/templates/model_showcase/info_field/additional_fields/enum/: enum_field.html  enum_value.html
model_showcase/templates/model_showcase/info_model/: baseclasses.html  links.html  model_info.html
model_showcase/templates/model_showcase/info_model/related/: related_list_model.html  related_model.html
model_showcase/templates/model_showcase/info_model/subclasses/: for_item.html  subclasses.html
model_showcase/templates/registration/: login.html
model_showcase/utils/: __init__.py
test_lab/: apps.py  models.py
test_lab/tests/: test_field_info.py  test_model_info.py  test_property_field.py
